--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "ejs": "^3.1.10",
     "express": "^4.19.2",
     "express-ejs-layouts": "^2.5.1",
-    "mongoose": "^8.3.0"
+    "mongoose": "^8.3.0",
+    "multer": "^1.4.5-lts.1"
   }
 }
